fix: search is working
Create 0014_merge_20201129_1435.py

fix: misc issues fixed

fix: used whatsapp instead of instagram on footer

fix: search is working

--- a/main/templates/main/addposts.html
+++ b/main/templates/main/addposts.html
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <div class="card text-center ">
-                <img class="img-fluid" src="https://ebaazar.com.bd/images/biggapon_02.jpg" alt="evaly biggapon">
+                <img class="img-fluid" src="{% get_media_prefix %}{{ site_info.logo }}" alt="{{ site_info.name }}">
             </div>
         </div>
     </div>
