--- a/main/templates/main/partials/footer.html
+++ b/main/templates/main/partials/footer.html
@@ -3,9 +3,11 @@
         <div class="py-5 px-5 footer-top">
             <div class="row">
                 <div class="col-6 col-md-3 download">
-                    <h5>Download</h5>
-                    <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
-                        alt="" class="img-fluid">
+                    <h5>Help & Support</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Membership</a></li>
+                    </ul>
                 </div>
                 <div class="col-6 col-md-3">
                     <h5>Menu</h5>
@@ -27,8 +29,8 @@
                     <ul class="list-unstyled social">
                         <li><a href="https://facebook.com/{{ site_info.facebook }}" target="_blank"><i
                                     class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="https://instagram.com/{{ site_info.instagram}}" target="_blank"><i
-                                    class="fab fa-instagram"></i></a></li>
+                        <li><a href="tel:{{ site_info.contact}}" target="_blank"><i
+                                    class="fab fa-whatsapp"></i></a></li>
                         <li><a href="https://youtube.com/{{ site_info.youtube }}" target="_blank"><i
                                     class="fab fa-youtube"></i></a></li>
                     </ul>
