--- a/static/css/utils/_variables.scss
+++ b/static/css/utils/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #00b894;
+$primary-color: #099cec;
 $secondary-color: red;
 
-$primary-font: 'Open Sans', sans-serif;
-$secondary-font: 'Rubik', sans-serif;
+$primary-font: "Open Sans", sans-serif;
+$secondary-font: "Rubik", sans-serif;
