--- a/static/css/pages/_home.scss
+++ b/static/css/pages/_home.scss
@@ -52,9 +52,20 @@ section.categories {
 		border: 1px solid rgba(0, 0, 0, 0.1);
 		border-radius: 3px;
 		margin: 7px;
+		transition: 0.3s ease-in;
+
+		&:hover {
+			transform: translateY(-5px);
+		}
 
 		a {
 			color: inherit;
+		}
+
+		.subc {
+			&:hover {
+				color: $primary-color;
+			}
 		}
 	}
 }
