--- a/static/css/components/_navbar.scss
+++ b/static/css/components/_navbar.scss
@@ -1,5 +1,7 @@
+@import "../utils/variables";
+
 nav.navbar {
-	background-color: #00b894 !important;
+	background-color: $primary-color !important;
 	font-size: 14px;
 	padding-top: 10px !important;
 	padding-bottom: 10px !important;
