--- a/main/templates/main/partials/footer.html
+++ b/main/templates/main/partials/footer.html
@@ -37,7 +37,7 @@
         </div>
         <div class="mx-5 footer-bottom">
             <p class="text-center">
-                &copy; 2020 {{ site_info.name }}. All rights reserved.
+                &copy; {{ current_year }} {{ site_info.name }}. All rights reserved.
             </p>
         </div>
     </div>
