--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,75 +1,46 @@
 {% extends 'main/base.html' %}
+{% load static %}
+
+{% block meta %}
+<title>Register | Ekroybikroy</title>
+{% endblock %}
+
+{% block styles %}
+<link rel="stylesheet" href="{% static 'account/css/style.css' %}">
+{% endblock %}
 
 {% block body %}
-
-
-
-<div class="container py-3 ">
-    
-    <div class="jumbotron">
-        <div class="row">
-         
-            <div class="col-md-6 mx-auto offset-md-0 py-3" >
-                <div class="card  " style="-webkit-box-shadow: 11px 15px 14px 8px rgba(0,0,0,0.75);
--moz-box-shadow: 11px 15px 14px 8px rgba(0,0,0,0.75);
-box-shadow: 11px 15px 14px 8px rgba(0,0,0,0.75);">
-                    <div class="card-title d-flex justify-content-center">
-                        <h1>Sign Up</h1>
+<div class="login-area">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-5 mx-auto">
+        <div class="form">
+            <form class="login-form" method="post">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="col-md-6">
+                        <input type="text" name="first_name" placeholder="First Name" />
                     </div>
-                    <div class="card-body">
-                        <form action="" method="POST">
-                            {% csrf_token %}
-            
-                                <div class="d-flex pr-3 mb-3">
-                                    <i  class="far fa-user-circle fa-2x pr-3"></i>
-                                   <input type="email" class="form-control" placeholder="Email" id="name" name="email">   
-                                </div>
-                                <div class="d-flex pr-3 mb-3">
-                                    <i  class="far fa-user-circle fa-2x pr-3"></i>
-                                   <input type="text" class="form-control" placeholder="User name" id="name" name="user_name">   
-                                </div>
-
-                            
-
-                                <div class="d-flex pr-3 mb-3">
-                                    <i  class="fas fa-user-circle fa-2x pr-3"></i>
-                                    <input type="text" class="form-control" placeholder="First name" id="name" name="f-name">   
-                                </div>
-                                <div class="d-flex pr-3 mb-3">
-                                    <i  class="fas fa-user-circle fa-2x pr-3"></i>
-                                    <input type="text" class="form-control" placeholder="Last name" id="name" name="l-name">   
-                                </div>
-
-                            <div class="d-flex pr-3 mb-3">
-                                    <i  class="fas fa-user-circle fa-2x pr-3"></i>
-                                    <input type="password" class="form-control" placeholder="password" id="name" name="password1">
-                            </div>
-                            <div class="d-flex pr-3 mb-3">
-                                    <i  class="fas fa-user-circle fa-2x pr-3"></i>
-                                    <input type="password" class="form-control" placeholder="confirm-password" id="name" name="password2">
-                            </div>
-
-                            <div class="d-flex justify-content-center px-4 mb-5">
-
-                                    
-                               <input class="btn btn-danger btn-sm" type="submit"> 
-                                 
-                            </div> 
-
-                           
-
-
-                        </form>
+                    <div class="col-md-6">
+                        <input type="text" name="last_name" placeholder="Last Name" />
                     </div>
                 </div>
-            </div>
+                <input type="text" name="username" placeholder="username" />
+                <input type="email" name="email" placeholder="email" />
+                <div class="form-row">
+                    <div class="col-md-6">
+                        <input type="password" name="password1" placeholder="password" />
+                    </div>
+                    <div class="col-md-6">
+                        <input type="password" name="password2" placeholder="password" />
+                    </div>
+                </div>
+                <button type="submit">Register</button>
+                <p class="message">Already have an account? <a href="{% url 'login-page' %}">Login</a></p>
+            </form>
         </div>
+      </div>
     </div>
-
+  </div>
 </div>
-
-
-
-
-
 {% endblock body %}
