--- a/main/templates/main/partials/meta.html
+++ b/main/templates/main/partials/meta.html
@@ -1,2 +1,5 @@
+{% load static %}
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/x-icon">
