--- a/main/templates/main/partials/navbar.html
+++ b/main/templates/main/partials/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg py-3">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Ekroybikroy</a>
+        <a class="navbar-brand" href="/">{{ site_info.name }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
