--- a/main/templates/main/details.html
+++ b/main/templates/main/details.html
@@ -2,12 +2,11 @@
 {% load static %}
 
 {% block meta %}
-<title>{{ product.location }} | Ebazar Clone</title>
+<title>{{ product.title }} | {{ site_info.name }}</title>
 {% endblock %}
 
 {% block body %}
-<div class="wrapper py-1">
-
+<div class="wrapper py-1 product-detail">
     <div class="container-fluid">
         <div class="d-flex flex-row py-2" id="details">
             <div class="col-lg-8" id="details-body">
@@ -17,7 +16,7 @@
                             <div>
                                 <h5 style="font-weight: 800;">{{ product.title }}</h5>
                                 <small><span class="mr-4"><i
-                                            class="fas fa-map-marker-alt mr-1"></i>{{ product.location }}</span>
+                                            class="fas fa-map-marker-alt mr-1"></i>{{ product.address }}</span>
                                     <span class="mr-4"><i class="far fa-clock mr-1"></i>{{ product.timestamp }}</span>
                                     <span><i class="far fa-eye mr-1"></i>{{ product.views }}</span></small>
                             </div>
@@ -29,53 +28,59 @@
                                     {% endif %}</p>
                             </div>
                         </div>
-                        <div>
-                            <img src="{% get_media_prefix %}{{ product.thumbnail }}" alt="..." class="rounded">
+                        <div class="thumbnail-wrapper">
+                            <img src="{% get_media_prefix %}{{ product.thumbnail }}" alt="{{ product.title }}"
+                                class="img-fluid rounded">
                         </div>
                     </div>
                 </div>
 
                 <div class="card my-3">
-                    <div class="card-body">
-                        <div class="d-flex flex-row m-1">
-                            <h6 style="font-weight: 800; font-size: .8em;">Condition:</h6>
-                            <small class="ml-auto" style="font-size: .9em;">{% if product.condition == 'used' %}Used
-                                {% elif product.condition == 'new' %} New {% endif %}</small>
+                    <div class="card-body detail-content">
+                        <div class="mb-2 info">
+                            <div class="d-flex">
+                                <h6 class="sub-heading">Condition:</h6>
+                                <small class="ml-2">
+                                    {% if product.condition == 'used' %}
+                                    Used
+                                    {% elif product.condition == 'new' %}
+                                    New
+                                    {% endif %}
+                                </small>
+                            </div>
                         </div>
                         <hr>
                         <div>
-                            <h6 style="font-weight: 800;">Description:</h6>
-                            <p style='font-size: .9em; color: hsl(0, 0%, 46%);'>{{ product.description }}</p>
+                            <h6 class="sub-heading">Description:</h6>
+                            <div class="description">{{ product.desc | safe }}</div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-11" id="details-user">
                 <div class="card my-3">
-                    <div class="card-body">
-                        <div class="d-flex  justify-content-center">
-                            <div class="text-center">
-                                <div class="text-center">
-                                    <img src="https://www.w3schools.com/howto/img_avatar.png" alt="">
-                                </div>
-                                <small>For sale by</small>
-                                <h6 style="font-weight: 800; font-size: .95em;">Sadiqur Hridoy</h6>
-                                <hr>
-                                <button class="btn btn-danger btn-lg mr-1"><i class="fas fa-phone mr-2"></i>
-                                    01887799444</button> <button class="btn btn-light btn-lg">View all ads</button>
-                            </div>
+                    <div class="card-body text-center">
+                        <div class="text-center">
+                            <img src="{% get_media_prefix %}{{ product.seller.avatar }}" alt="{{ product.seller.user.username }}">
                         </div>
+                        <small class="d-inline-block pt-1">For sale by</small>
+                        <h6 style="font-weight: 800; font-size: .95em;">{{ product.seller.user.first_name }} {{ product.seller.user.last_name }}</h6>
+                        <hr>
+                        <button class="btn btn-danger btn-lg mr-1">
+                            <i class="fas fa-phone mr-2"></i>{{ product.seller.phone }}
+                        </button>
+                        <button class="btn btn-light btn-lg">View all ads</button>
                     </div>
                 </div>
 
                 <div class="card my-3">
                     <div class="card-body">
                         <div class="d-flex">
-                            <div class="">
-                                <div class="alert alert-danger">
+                            <div class="w-100">
+                                <div class="alert alert-warning">
                                     Safety Tips
                                 </div>
-                                <ul>
+                                <ul class="list-unstyled pl-1" style="font-size: 15px">
                                     <li>Meet seller at a safe location</li>
                                     <li>Check the item before you buy</li>
                                     <li>Pay only after collecting item</li>
@@ -84,8 +89,6 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </div>
