--- a/main/templates/main/posts.html
+++ b/main/templates/main/posts.html
@@ -156,20 +156,25 @@
                     <div class="card my-3">
                         <div class="card-body">
                             <div class="d-flex">
-                                <div class="mr-3"><img src="{% get_media_prefix %}{{ product.thumbnail }}" alt="..."
-                                        class="rounded"></div>
-                                <div class="">
-                                    <h5 class="card-title">{{ product.title }}</h5>
-                                    <p style='font-size: .9em; color: hsl(0, 0%, 46%);'>{{ product.short_desc }}</p>
-                                    <small class='text-danger'
-                                        style='font-weight: 700; font-size: 1.1em; color: hsl(0, 88%, 68%);'>Tk
-                                        {{ product.price }}</small>
-                                    <hr class="mt-5">
-                                    <small><span class="mr-4"><i
-                                                class="fas fa-map-marker-alt mr-1"></i>{{ product.location }}</span>
-                                        <span class="mr-4"><i class="far fa-clock mr-1"></i>{{ product.timestamp }}
-                                        </span>
-                                        <span><i class="far fa-eye mr-1"></i>{{product.views}}</span></small>
+                                <div class="mr-3">
+                                    <img src="{% get_media_prefix %}{{ product.thumbnail }}" alt="..." class="rounded">
+                                </div>
+                                <div class="d-flex flex-column justify-content-between">
+                                    <div>
+                                        <h5 class="card-title">{{ product.title }}</h5>
+                                        <p style='font-size: .9em; color: hsl(0, 0%, 46%);'>{{ product.short_desc }}</p>
+                                        <small class='text-danger'
+                                            style='font-weight: 700; font-size: 1.1em; color: hsl(0, 88%, 68%);'>Tk
+                                            {{ product.price }}</small>
+                                    </div>
+                                    <div>
+                                        <hr />
+                                        <small><span class="mr-4"><i
+                                                    class="fas fa-map-marker-alt mr-1"></i>{{ product.location }}</span>
+                                            <span class="mr-4"><i
+                                                    class="far fa-clock mr-1"></i>{{ product.timestamp }}</span>
+                                            <span><i class="far fa-eye mr-1"></i>{{product.views}}</span></small>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -180,20 +185,19 @@
             <div class="container">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
-                        
-                        <a class="page-link" href="#" > < </a>
-                            
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#">...</a></li>
-                            <li class="page-item"><a class="page-link" href="#">9</a></li>
-                            <li class="page-item"><a class="page-link" href="#">10</a></li>
-                            <li class="page-item"><a class="page-link" href="#">11</a></li>
-                            
-                            <li class="page-item">
-                            <a class="page-link" href="#"> > </a>
-                        </li>
+
+                        <a class="page-link" href="#">
+                            < </a> <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item"><a class="page-link" href="#">...</a></li>
+                                <li class="page-item"><a class="page-link" href="#">9</a></li>
+                                <li class="page-item"><a class="page-link" href="#">10</a></li>
+                                <li class="page-item"><a class="page-link" href="#">11</a></li>
+
+                                <li class="page-item">
+                                    <a class="page-link" href="#"> > </a>
+                                </li>
                     </ul>
                 </nav>
             </div>
