--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -89,30 +89,6 @@ nav.navbar .post-btn {
   width: 200px;
 }
 
-#details p,
-#details small {
-  color: #9e9e9e;
-}
-
-#details #details-body hr {
-  margin-top: 0%;
-}
-
-#details #details-body img {
-  width: 500px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-#details #details-user img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-  position: center;
-}
-
 footer {
   background-color: #212121;
   color: rgba(255, 255, 255, 0.7);
@@ -202,5 +178,52 @@ section.categories .item a {
   background: #e5be45;
   color: #00b894;
   font-weight: bold;
+}
+
+.product-detail .detail-content .sub-heading {
+  font-size: 0.9em;
+  font-weight: 800;
+}
+
+.product-detail .detail-content .description {
+  opacity: 0.9;
+  font-size: 14px;
+}
+
+.product-detail .thumbnail-wrapper {
+  width: 300px;
+  height: 250px;
+}
+
+.product-detail .thumbnail-wrapper img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  objectfit: "cover";
+}
+
+.product-detail #details p,
+.product-detail #details small {
+  opacity: 0.9;
+  font-size: 14px;
+}
+
+.product-detail #details #details-body hr {
+  margin-top: 0%;
+}
+
+.product-detail #details #details-body img {
+  width: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.product-detail #details #details-user img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  position: center;
 }
 /*# sourceMappingURL=styles.css.map */
