--- a/main/templates/main/partials/styles.html
+++ b/main/templates/main/partials/styles.html
@@ -1,10 +1,10 @@
 {% load static %}
 
-<!-- CSS Files -->
 <link rel="stylesheet" href="{% static 'vendors/bootstrap/bootstrap.min.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
     crossorigin="anonymous" />
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&family=Rubik&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
