--- a/main/templates/main/posts.html
+++ b/main/templates/main/posts.html
@@ -157,12 +157,16 @@
                         <div class="card-body">
                             <div class="d-flex">
                                 <div class="mr-3">
-                                    <img src="{% get_media_prefix %}{{ product.thumbnail }}" alt="..." class="rounded">
+                                    {% for photo in product.photo_set.all %}
+                                        {% if photo.is_primary %}
+                                            <img src="{% get_media_prefix %}{{ photo.file }}" alt="{{ product.title }}" class="rounded">
+                                        {% endif %}
+                                    {% endfor %}
                                 </div>
                                 <div class="d-flex flex-column justify-content-between">
                                     <div>
                                         <h5 class="card-title">{{ product.title }}</h5>
-                                        <p style='font-size: .9em; color: hsl(0, 0%, 46%);'>{{ product.short_desc }}</p>
+                                        <p style='font-size: .9em; color: hsl(0, 0%, 46%);'>{{ product.description }}</p>
                                         <small class='text-danger'
                                             style='font-weight: 700; font-size: 1.1em; color: hsl(0, 88%, 68%);'>Tk
                                             {{ product.price }}</small>
@@ -172,7 +176,7 @@
                                         <small><span class="mr-4"><i
                                                     class="fas fa-map-marker-alt mr-1"></i>{{ product.location }}</span>
                                             <span class="mr-4"><i
-                                                    class="far fa-clock mr-1"></i>{{ product.timestamp }}</span>
+                                                    class="far fa-clock mr-1"></i>{{ product.created_at }}</span>
                                             <span><i class="far fa-eye mr-1"></i>{{product.views}}</span></small>
                                     </div>
                                 </div>
