--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,7 @@
 body {
   background: #eeeeee;
   font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 a {
@@ -28,6 +29,12 @@ a:hover {
 
 .sp-bottom-100 {
   padding-bottom: 100px;
+}
+
+.form-control:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-color: #00b894;
 }
 
 nav.navbar {
@@ -199,7 +206,8 @@ section.categories .item a {
   display: block;
   width: 100%;
   height: 100%;
-  objectfit: "cover";
+  -o-object-fit: "cover";
+     object-fit: "cover";
 }
 
 .product-detail #details p,
@@ -225,5 +233,62 @@ section.categories .item a {
   width: 150px;
   border-radius: 50%;
   position: center;
+}
+
+.add-post-area .card-title {
+  padding: 15px 15px 15px 15px;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+
+.add-post-area form input, .add-post-area form textarea, .add-post-area form select {
+  margin: 5px 0px;
+  display: inline-block;
+  font-size: 14px;
+}
+
+.add-post-area form input::-webkit-input-placeholder, .add-post-area form textarea::-webkit-input-placeholder, .add-post-area form select::-webkit-input-placeholder {
+  font-size: 14px;
+}
+
+.add-post-area form input:-ms-input-placeholder, .add-post-area form textarea:-ms-input-placeholder, .add-post-area form select:-ms-input-placeholder {
+  font-size: 14px;
+}
+
+.add-post-area form input::-ms-input-placeholder, .add-post-area form textarea::-ms-input-placeholder, .add-post-area form select::-ms-input-placeholder {
+  font-size: 14px;
+}
+
+.add-post-area form input::placeholder, .add-post-area form textarea::placeholder, .add-post-area form select::placeholder {
+  font-size: 14px;
+}
+
+.add-post-area form input:focus, .add-post-area form textarea:focus, .add-post-area form select:focus {
+  border-color: #ced4da;
+}
+
+.add-post-area form label {
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.add-post-area .subcategory-wrapper {
+  display: none;
+}
+
+.add-post-area .area-wrapper {
+  display: none;
+}
+
+.add-post-area ul.rules {
+  font-size: 14px;
+}
+
+.add-post-area ul.rules li {
+  margin-top: 5px;
+}
+
+.add-post-area ul.rules li:first-child {
+  margin-top: none;
 }
 /*# sourceMappingURL=styles.css.map */
