--- a/main/templates/main/partials/navbar.html
+++ b/main/templates/main/partials/navbar.html
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">All Ads<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href={% url 'posts' %}>All Ads<span class="sr-only">(current)</span></a>
                 </li>
 
                 {% if user.is_authenticated %}
