--- a/main/templates/main/details.html
+++ b/main/templates/main/details.html
@@ -75,7 +75,7 @@
                         <button class="btn btn-danger btn-lg mr-1">
                             <i class="fas fa-phone mr-2"></i>{{ product.seller.profile.phone }}
                         </button>
-                        <button class="btn btn-light btn-lg">View all ads</button>
+                        <a href="/posts/?userid={{ product.seller.id }}" class="btn btn-light btn-lg">View all ads</a>
                     </div>
                 </div>
 
