--- a/main/templates/main/posts.html
+++ b/main/templates/main/posts.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block meta %}
-<title>{{ category.name }}</title>
+<title>{{ site_info.name }}</title>
 {% endblock %}
 
 {% block body %}
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <div class="row py-4" id="post">
             <div class="col-lg-3 col-1" id="post-filter">
-                <div class="card my-3">
+                <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-row">
                             <div>
@@ -151,22 +151,25 @@
                 </div>
             </div>
             <div class="col-lg-9 col-11" id="post-item">
+                {% if products %}
                 {% for product in products %}
                 <a href={% url 'post-details' product.id %}>
-                    <div class="card my-3">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <div class="d-flex">
                                 <div class="mr-3">
                                     {% for photo in product.photo_set.all %}
-                                        {% if photo.is_primary %}
-                                            <img src="{% get_media_prefix %}{{ photo.file }}" alt="{{ product.title }}" class="rounded">
-                                        {% endif %}
+                                    {% if photo.is_primary %}
+                                    <img src="{% get_media_prefix %}{{ photo.file }}" alt="{{ product.title }}"
+                                        class="rounded">
+                                    {% endif %}
                                     {% endfor %}
                                 </div>
                                 <div class="d-flex flex-column justify-content-between">
                                     <div>
                                         <h5 class="card-title">{{ product.title }}</h5>
-                                        <p style='font-size: .9em; color: hsl(0, 0%, 46%);'>{{ product.description }}</p>
+                                        <p style='font-size: .9em; color: hsl(0, 0%, 46%);'>{{ product.description }}
+                                        </p>
                                         <small class='text-danger'
                                             style='font-weight: 700; font-size: 1.1em; color: hsl(0, 88%, 68%);'>Tk
                                             {{ product.price }}</small>
@@ -185,24 +188,36 @@
                     </div>
                 </a>
                 {% endfor %}
+                {% else %}
+                <h1 class="mt-3">No Product Found</h1>
+                {% endif %}
             </div>
+
             <div class="container">
                 <nav aria-label="Page navigation example">
+                    {% if products.has_other_pages %}
                     <ul class="pagination justify-content-center">
+                        {% if products.has_previous %}
+                            <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}{{ snip }}">&laquo;</a></li>
+                        {% else %}
+                            <li class="disabled page-item"><span class="page-link">&laquo;</span></li>
+                        {% endif %}
 
-                        <a class="page-link" href="#">
-                            < </a> <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item"><a class="page-link" href="#">...</a></li>
-                                <li class="page-item"><a class="page-link" href="#">9</a></li>
-                                <li class="page-item"><a class="page-link" href="#">10</a></li>
-                                <li class="page-item"><a class="page-link" href="#">11</a></li>
+                        {% for i in products.paginator.page_range %}
+                            {% if products.number == i %}
+                                <li class="page-item"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+                            {% else %}
+                                <li class="page-item"><a href="{% url 'posts' %}?page={{ i }}{{ snip }}" class="page-link">{{ i }}</a></li>
+                            {% endif %}
+                        {% endfor %}
 
-                                <li class="page-item">
-                                    <a class="page-link" href="#"> > </a>
-                                </li>
+                        {% if products.has_next %}
+                            <li class="page-item"><a href="?page={{ products.next_page_number }}{{ snip }}" class="page-link">&raquo;</a></li>
+                        {% else %}
+                            <li class="disabled page-item"><span class="page-link">&raquo;</span></li>
+                        {% endif %}
                     </ul>
+                    {% endif %}
                 </nav>
             </div>
         </div>
